--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,14 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 3/24 (Day 5)</h1>
+    <h1>GDWD 105 Agenda for 3/27 (Day 6)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-9:50): Wiki Page 2 Lab Time</h2>
-      <h2>Period 2 (10:10-11:50): HTML Children Challenge | Semantics, Box Model, and Image Review</h2>
-      <h2>Period 3 (12:40-2:20): Wiki Page 3 (Project)</h2>
-      <h2>Period 4 (2:30pm-2:45pm): Wrap-up</h2>
+      <h2>Period 1 (9am-11am): </h2>
+      <h2>Long Break (30min)</h2>
+      <h2>Period 2 (11:30-12:50): </h2>
+      <h2>Short Break (10min)</h2>
+      <h2>Period 3 (1pm-2:15): </h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
