--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,11 +62,11 @@
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-11am): </h2>
+      <h2>Period 1 (9am-11am): Survey and Intro to CSS</h2>
       <h2>Long Break (30min)</h2>
-      <h2>Period 2 (11:30-12:50): </h2>
+      <h2>Period 2 (11:30-12:50): CSS Demo</h2>
       <h2>Short Break (10min)</h2>
-      <h2>Period 3 (1pm-2:15): </h2>
+      <h2>Period 3 (1pm-2:15): Box Model Exercise</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
