--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,15 +58,15 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 3/27 (Day 6)</h1>
+    <h1>GDWD 105 Agenda for 3/28 (Day 7)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Survey and Intro to CSS</h2>
+      <h2>Period 1 (9am-10:25am): Lab Time (Box Model Exercise) | CSS Font Properties & more</h2>
       <h2>Short Break (5min)</h2>
-      <h2>Period 2 (10:30-12pm): CSS Demo</h2>
+      <h2>Period 2 (10:30-12pm): Semantics & Attributes Exercise</h2>
       <h2>Lunch Break (40min)</h2>
-      <h2>Period 3 (12:40pm-2:15): Box Model Exercise</h2>
+      <h2>Period 3 (12:40pm-2:15): Semantics & Attributes Exercise (cont.)</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
