--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,9 +62,9 @@
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Lab Time (Box Model Exercise) | CSS Font Properties & more</h2>
+      <h2>Period 1 (9am-10:25am): Lab Time (Box Model Exercise) | CSS Review Kahoot</h2>
       <h2>Short Break (5min)</h2>
-      <h2>Period 2 (10:30-12pm): Semantics & Attributes Exercise</h2>
+      <h2>Period 2 (10:30-12pm): CSS Font Properties & more | Semantics & Attributes Exercise</h2>
       <h2>Lunch Break (40min)</h2>
       <h2>Period 3 (12:40pm-2:15): Semantics & Attributes Exercise (cont.)</h2>
     </div>
