--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,11 +62,11 @@
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Lab Time (Box Model Exercise) | CSS Font Properties & more</h2>
+      <h2>Period 1 (9am-10:25am): Basic Nav Bar Exercise</h2>
       <h2>Short Break (5min)</h2>
-      <h2>Period 2 (10:30-12pm): Semantics & Attributes Exercise (HTML Setup)</h2>
+      <h2>Period 2 (10:30-12pm): Quiz 1 - Kahoot Review | Basic Nav Bar (cont.)</h2>
       <h2>Lunch Break (40min)</h2>
-      <h2>Period 3 (12:40pm-2:15): Semantics & Attributes Exercise (adding CSS)</h2>
+      <h2>Period 3 (12:40pm-2:15): Semantics & Attributes Exercise - Part 2 | Lab Time</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
