--- a/examples/flexbox_basics.html
+++ b/examples/flexbox_basics.html
@@ -8,13 +8,13 @@
         <link href="css/flexbox_basics.css" rel="stylesheet">
     </head>
     <body>
-        <div class="flexbox column">
+        <div class="flexbox column"> <!-- play around by adding different classes here -->
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
         </div>
-        <div class="flexbox right">
+        <div class="flexbox right"> <!-- play around by adding different classes here -->
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
