--- a/examples/flexbox_basics.html
+++ b/examples/flexbox_basics.html
@@ -8,13 +8,50 @@
         <link href="css/flexbox_basics.css" rel="stylesheet">
     </head>
     <body>
+        <h3>Flexbox - Direction: Column</h3>
         <div class="flexbox column"> <!-- play around by adding different classes here -->
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
         </div>
+        <h3>Flexbox - Justify Content: flex-end</h3>
         <div class="flexbox right"> <!-- play around by adding different classes here -->
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <h3>Flexbox - Justify Content: flex-start</h3>
+        <div class="flexbox left"> <!-- play around by adding different classes here -->
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <h3>Flexbox - Justify Content: center</h3>
+        <div class="flexbox center"> <!-- play around by adding different classes here -->
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <h3>Flexbox - Justify Content: space-between</h3>
+        <div class="flexbox space_between"> <!-- play around by adding different classes here -->
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <h3>Flexbox - Justify Content: space-around</h3>
+        <div class="flexbox space_around"> <!-- play around by adding different classes here -->
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <h3>Flexbox - Justify Content: space-evenly</h3>
+        <div class="flexbox space_evenly"> <!-- play around by adding different classes here -->
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
