--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,15 +58,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 3/29 (Day 8)</h1>
+    <h1>GDWD 105 Agenda for 3/31 (Day 10)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Quiz Week #1 | Lab Time (Semantics & Attributes)</h2>
-      <h2>Short Break (5min)</h2>
-      <h2>Period 2 (10:30-12pm): Flexbox and Responsiveness</h2>
-      <h2>Lunch Break (40min)</h2>
-      <h2>Period 3 (12:40pm-2:15): Responsive Navbar</h2>
+      <h2>Period 1 (9am-): CSS Bonus Demos: spans, hovers, and more | Lab Time</h2>
+      <h2>Period 2 (-12pm): CSS Review Kahoot</h2>
+      <h2>Lunch Break (45min)</h2>
+      <h2>Period 3 (12:40pm-2:15): Wikipedia Sidebar Demo (optional) | Lab Time</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
