--- a/examples/wikipage_with_semantics.html
+++ b/examples/wikipage_with_semantics.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Wiki Page 1</title>
+        <link href="css/wiki.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -16,7 +17,7 @@
         <article>
             <section>
                 <p>
-                    Crown shyness (also <a href="#">canopy disengagement</a>,[1] <a href="#">canopy shyness</a>,[2] or <a href="#">inter-crown spacing</a>[3]) is a phenomenon observed in some tree species, in which the crowns of fully stocked trees do not touch each other, forming a canopy with <a href="#">channel-like gaps</a>.[4][5] The phenomenon is most prevalent among trees of the same species, but also occurs between trees of <a href="#">different species</a>.[6][7] There exist many hypotheses as to why crown shyness is an adaptive behavior, and research suggests that it might inhibit spread of <a href="#">leaf-eating insect larvae</a>.[8]
+                    <span class="bold italic">Crown shyness</span> (also <a class="bold" href="#">canopy disengagement</a>,[1] <a href="#">canopy shyness</a>,[2] or <a href="#">inter-crown spacing</a>[3]) is a phenomenon observed in some tree species, in which the crowns of fully stocked trees do not touch each other, forming a canopy with <a href="#">channel-like gaps</a>.[4][5] The phenomenon is most prevalent among trees of the same species, but also occurs between trees of <a href="#">different species</a>.[6][7] There exist many hypotheses as to why crown shyness is an adaptive behavior, and research suggests that it might inhibit spread of <a href="#">leaf-eating insect larvae</a>.[8]
                 </p>
             </section>
             <nav>
@@ -40,13 +41,47 @@
             <section>
                 <h3>Possible physiological explanations</h3>
                 <hr>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Dryobalanops_Aromatica_canopy.jpg/600px-Dryobalanops_Aromatica_canopy.jpg">
+
+                <div id="leftBorder">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium repudiandae maxime placeat aliquam, ea officia! Dicta sapiente non aperiam sit atque! Quisquam sequi doloribus distinctio fugit tempora illo quas rerum.
+                </div>
+
+                <div class="flexbox">
+                    <div class="wiki_image_container">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Dryobalanops_Aromatica_canopy.jpg/600px-Dryobalanops_Aromatica_canopy.jpg">
+                        <p>This is a caption a;sdjfasjf as fsdfsa sadjfsd asdfsadfa ssdf sad ffasdfadsf</p>
+                    </div>
+                    <div class="wiki_image_container">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Dryobalanops_Aromatica_canopy.jpg/600px-Dryobalanops_Aromatica_canopy.jpg">
+                        <p>This is a caption a;sdjfasjf as fsdfsa sadjfsd asdfsadfa ssdf sad ffasdfadsf</p>
+                    </div>
+                    <div class="wiki_image_container">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Dryobalanops_Aromatica_canopy.jpg/600px-Dryobalanops_Aromatica_canopy.jpg">
+                        <p>This is a caption a;sdjfasjf as fsdfsa sadjfsd asdfsadfa ssdf sad ffasdfadsf</p>
+                    </div>
+                </div>
+                <div class="flexbox">
+                    <div class="wiki_image_container">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Dryobalanops_Aromatica_canopy.jpg/600px-Dryobalanops_Aromatica_canopy.jpg">
+                        <p>This is a caption a;sdjfasjf as fsdfsa sadjfsd asdfsadfa ssdf sad ffasdfadsf</p>
+                    </div>
+                    <div class="wiki_image_container">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Dryobalanops_Aromatica_canopy.jpg/600px-Dryobalanops_Aromatica_canopy.jpg">
+                        <p>This is a caption a;sdjfasjf as fsdfsa sadjfsd asdfsadfa ssdf sad ffasdfadsf</p>
+                    </div>
+                </div>
+
+
+
+
                 <p>
                     The exact physiological basis of crown shyness is not certain.<a href="#">[6]</a> The phenomenon has been discussed in <a href="#">scientific literature</a> since the 1920s.[9] The variety of hypotheses and experimental results might suggest that there are multiple mechanisms across different species, an example of convergent evolution.<a href="#"></a>[citation needed]
                 </p>
+                
                 <p>
                     Some hypotheses contend that the interdigitation of canopy branches leads to “reciprocal pruning” of adjacent trees. Trees in windy areas suffer physical damage as they collide with each other during winds. As the result of abrasions and collisions, there is an induced crown shyness response. Studies suggest that lateral branch growth is largely uninfluenced by neighbours until disturbed by mechanical abrasion.[10] If the crowns are artificially prevented from colliding in the winds, they gradually fill the canopy gaps.[11] This explains instances of crown shyness between branches of the same organism. Proponents of this idea cite that shyness is particularly seen in conditions conducive to this pruning, including windy forests, stands of flexible trees, and early succession forests where branches are flexible and limited in lateral movement.[6][12] By this explanation, variable flexibility in lateral branches has a large bearing on degree of crown shyness.
                 </p>
+                
             </section>
         </article>
     </body>
