dropdown and transitions

--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,14 +58,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 4/3 (Day 11)</h1>
+    <h1>GDWD 105 Agenda for 4/4 (Day 12)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-): Does it HTML/CSS? Kahoot | Survey</h2>
-      <h2>Period 2 (-12pm): Flexbox, Icons, and Responsiveness Exercise</h2>
+      <h2>Period 1 (9am-): Dropdown Menus & CSS Transitions Exercise</h2>
+      <h2>Period 2 (-12pm): Dropdown Menus & CSS Transitions Exercise (cont.)</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:40pm-2:15): Flexbox, Icons, and Responsiveness Exercise (cont.)</h2>
+      <h2>Period 3 (12:40pm-2:15): More with Transitions and Positions</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
