--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,10 +62,10 @@
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-): Dropdown Menus & CSS Transitions Exercise</h2>
-      <h2>Period 2 (-12pm): Dropdown Menus & CSS Transitions Exercise (cont.)</h2>
+      <h2>Period 1 (9am-11am): Responsive Nav Bar | Project Part 1</h2>
+      <h2>Period 2 (11:10am-12pm): Position and more Flexbox Demos</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:40pm-2:15): More with Transitions and Positions</h2>
+      <h2>Period 3 (12:40pm-2:15): Responsive Nav Bar | Project Part 1 (cont.)</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
