--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,14 +58,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 4/5 (Day 13)</h1>
+    <h1>GDWD 105 Agenda for 4/6 (Day 14)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-11am): Responsive Nav Bar | Project Part 1</h2>
-      <h2>Period 2 (11:10am-12pm): Google Fonts, Position, and more Flexbox Demos</h2>
+      <h2>Period 1 (9am-10:25am): Flexbox Content Demos</h2>
+      <h2>Period 2 (10:35am-12pm): Lab Time (Responsive Nav Bar Project Part 2)</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:40pm-2:15): Responsive Nav Bar | Project Part 1 (cont.)</h2>
+      <h2>Period 3 (12:40pm-2pm): Lab Time (Responsive Nav Bar Project Part 2)</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
