--- a/examples/flexbox_content.html
+++ b/examples/flexbox_content.html
@@ -11,7 +11,9 @@
         <nav></nav>
         <main>
             <section class="side_by_side">
-                <img src="images/derplander.jpeg">
+                <div class="img_container">
+                    <img src="images/derplander.jpeg">
+                </div>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis necessitatibus eius reprehenderit distinctio, vero laborum tempore magni itaque consectetur! Dolore accusamus atque doloribus molestiae commodi facere quaerat cum animi?
                 </p>
