--- a/examples/flexbox_content.html
+++ b/examples/flexbox_content.html
@@ -22,7 +22,9 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, provident! Explicabo minima repellendus, quas necessitatibus voluptatem impedit facere beatae eos tenetur excepturi nulla debitis, inventore optio delectus blanditiis, ea deleniti.
                 </p>
-                <img src="images/endwalker.jpeg">
+                <div class="img_container">
+                    <img src="images/endwalker.jpeg">
+                </div>
             </section>
             <section class="gallery">
                 <img src="images/endwalker.jpeg">
