--- a/examples/flexbox_content.html
+++ b/examples/flexbox_content.html
@@ -36,13 +36,13 @@
                 <img src="images/endwalker.jpeg">
             </section>
             <section class="gallery_row">
-                <div>
+                <div class="img_container">
                     <img src="images/endwalker.jpeg">
                 </div>
-                <div>
+                <div class="img_container">
                     <img src="images/endwalker.jpeg">
                 </div>
-                <div>
+                <div class="img_container">
                     <img src="images/derplander.jpeg">
                 </div>
                 
