--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -65,7 +65,7 @@
       <h2>Period 1 (9am-11:25am): Quiz 3 Review Kahoot | Lab Time</h2>
       <h2>Period 2 (11:25am-12pm): Intro to Tables | HTML Tables Exercise</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Lab Time (Nav Bar Project & Tables Exercies)</h2>
+      <h2>Period 3 (12:45pm-2pm): Lab Time (Nav Bar Project & Tables Exercise)</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
