--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -62,7 +62,7 @@
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Quiz 3 | Intro to Grids</h2>
+      <h2>Period 1 (9am-10:25am): Quiz 3 | Intro to CSS Grids</h2>
       <h2>Period 2 (10:35am-12pm): Responsive Portfolio Pt 1 - Responsive Grid</h2>
       <h2>Lunch Break (45min)</h2>
       <h2>Period 3 (12:45pm-2pm): Responsive Portfolio Pt 1 - Responsive Grid (cont.)</h2>
