--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,14 +58,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 4/12 (Day 18)</h1>
+    <h1>GDWD 105 Agenda for 4/13 (Day 19)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Responsive Portfolio Pt 3 - 5 Galleries</h2>
-      <h2>Period 2 (10:35am-12pm): Responsive Portfolio Pt 3 - 5 Galleries (cont.)</h2>
+      <h2>Period 1 (9am-10:25am): Intro to Bootstrap</h2>
+      <h2>Period 2 (10:35am-12pm): Responsive Portfolio Part 4 - Bootstrap Carousel</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Lab Time | Maybe Bootstrap?</h2>
+      <h2>Period 3 (12:45pm-2pm): Intro to Foxtail Farms Project</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
