--- a/responsive_portfolio/index.html
+++ b/responsive_portfolio/index.html
@@ -57,7 +57,9 @@
                     <a href="#">LEARN MORE</a>
                 </div>
             </section>
-            <section id="carousel_container"></section>
+            <section id="carousel_container">
+                
+            </section>
             <section id="gallery_container">
                 <h2>Gallery 1 - Grid</h2>
                 <div id="gallery_1">
