--- a/examples/forms.html
+++ b/examples/forms.html
@@ -24,6 +24,19 @@
                     <label for="last_name_id">Last Name:</label>
                     <input type="text" id="last_name_id" name="last_name">
                 </div>
+
+                <h2>Textarea Input</h2>
+                <h4>Each textarea should also have a unique 'name' attribute</h4>
+
+                <div>
+                    <label for="code_feelings_id">How do you feel about programming.</label>
+                    <textarea 
+                        id="code_feelings_id" 
+                        name="code_feelings"
+                        rows="5"
+                        cols="40"
+                        placeholder="This is the default text for a text area"></textarea>
+                </div>
             </fieldset>
         </form>
     </body>
