--- a/examples/forms.html
+++ b/examples/forms.html
@@ -38,6 +38,31 @@
                         placeholder="This is the default text for a text area"></textarea>
                 </div>
             </fieldset>
+            <fieldset>
+                <legend>Option-related Form Elements</legend>
+                <h2>Checkbox Input</h2>
+                <h4>
+                    All checkbox inputs should have unique (but similar)
+                    'name' attributes and different 'value' attributes
+                </h4>
+                <p>How do you get to class?</p>
+                <div>
+                    <input type="checkbox" id="bike_checkbox" name="vehicle_1" value="bike">
+                    <label for="bike_checkbox">Bike</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="bus_checkbox" name="vehicle_2" value="bus">
+                    <label for="bus_checkbox">Bus</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="car_checkbox" name="vehicle_3" value="car">
+                    <label for="car_checkbox">Car</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="bed_checkbox" name="vehicle_4" value="bed">
+                    <label for="bed_checkbox">I roll out of bed and open my laptop</label>
+                </div>
+            </fieldset>
         </form>
     </body>
 </html>
