--- a/examples/forms.html
+++ b/examples/forms.html
@@ -62,6 +62,26 @@
                     <input type="checkbox" id="bed_checkbox" name="vehicle_4" value="bed">
                     <label for="bed_checkbox">I roll out of bed and open my laptop</label>
                 </div>
+
+                <h2>Radio Input</h2>
+                <h4>
+                    All radio inputs of the same group should have
+                    the SAME 'name' attributes, but different 'value' attributes
+                </h4>
+                <p>What program are you in?</p>
+
+                <div>
+                    <input type="radio" id="rasp_radio" name="program" value="rasp">
+                    <label for="rasp_radio">Recording Arts and Show Production</label>
+                </div>
+                <div>
+                    <input type="radio" id="dfvp_radio" name="program" value="dfvp">
+                    <label for="dfvp_radio">Digital Filmmaking and Video Production</label>
+                </div>
+                <div>
+                    <input type="radio" id="gdwd_radio" name="program" value="gdwd">
+                    <label for="gdwd_radio">Graphic Design and Web Development</label>
+                </div>
             </fieldset>
         </form>
     </body>
