--- a/examples/forms.html
+++ b/examples/forms.html
@@ -83,6 +83,51 @@
                     <label for="gdwd_radio">Graphic Design and Web Development</label>
                 </div>
             </fieldset>
+            <fieldset>
+                <legend>Complex Form Elements</legend>
+                <h2>Date Input</h2>
+                <h4>Each date input should have a unique 'name' attribute</h4>
+
+                <div>
+                    <label for="date_id">When is your birthday?</label>
+                    <input type="date" id="date_id" name="birthday">
+                </div>
+
+                <h2>Dropdown Input (select/options)</h2>
+                <h4>
+                    Each dropdown should have a unique 'name' attribute
+                    on the "select" element,
+                    and unique 'value' attributes on each "option" element
+                </h4>
+
+                <div>
+                    <label for="food_group_id">
+                        What is your favorite food group?
+                    </label>
+                    <select id="food_group_id" name="food_group">
+                        <option value="fruits">Fruits</option>
+                        <option value="vegetables">Veggies</option>
+                        <option value="meats">Meat</option>
+                        <option value="grains">Grains</option>
+                        <option value="dairy">Dairy</option>
+                    </select>
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Button-related Form Elements</legend>
+                <h2>Button Inputs</h2>
+                <h4>
+                    A button input does not need a 'name' attribute,
+                    but to change the text inside the button,
+                    you will need to use the 'value' attribute.
+                </h4>
+
+                <div>
+                    <input type="button" value="Normal Button">
+                    <input type="reset" value="Click me to reset everything">
+                    <input type="submit" value="Submit everything">
+                </div>
+            </fieldset>
         </form>
     </body>
 </html>
