--- a/examples/forms.html
+++ b/examples/forms.html
@@ -86,15 +86,15 @@
                 <p>What program are you in?</p>
 
                 <div>
-                    <input type="radio" id="rasp_radio" name="program" value="rasp">
+                    <input type="radio" id="rasp_radio" name="program" value="rasp" required>
                     <label for="rasp_radio">Recording Arts and Show Production</label>
                 </div>
                 <div>
-                    <input type="radio" id="dfvp_radio" name="program" value="dfvp">
+                    <input type="radio" id="dfvp_radio" name="program" value="dfvp" required>
                     <label for="dfvp_radio">Digital Filmmaking and Video Production</label>
                 </div>
                 <div>
-                    <input type="radio" id="gdwd_radio" name="program" value="gdwd">
+                    <input type="radio" id="gdwd_radio" name="program" value="gdwd" required>
                     <label for="gdwd_radio">Graphic Design and Web Development</label>
                 </div>
             </fieldset>
