--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -58,14 +58,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 4/19 (Day 23)</h1>
+    <h1>GDWD 105 Agenda for 4/20 (Day 24)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Contact Form - Part 1 | Lab Time</h2>
-      <h2>Period 2 (10:35am-12pm): Form Validation & Actions</h2>
+      <h2>Period 1 (9am-10:25am): Review Kahoot for Quiz #4 (Midterm)</h2>
+      <h2>Period 2 (10:35am-12pm): FB Form Project</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Contact Form - Part 2 | Exercise</h2>
+      <h2>Period 3 (12:45pm-2pm): FB Form Project</h2>
     </div>
 
     <!-- <h1>Assignments, Deliverables &amp; More</h1>
