--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -78,20 +78,19 @@
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Review Kahoot for Quiz #4 (Midterm)</h2>
-      <h2 class="fire">FIRE DRILL</h2>
+      <h2>Period 1 (9am-10:25am): Quiz #4 (Midterm) | FB Form Project</h2>
       <h2>Period 2 (10:35am-12pm): FB Form Project</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): FB Form Project</h2>
+      <h2>Period 3 (12:45pm-2pm): FB Form Project (Due at 2pm)</h2>
     </div>
 
-    <!-- <h1>Assignments, Deliverables &amp; More</h1>
+    <h1>Coming Soon</h1>
     <div id="agenda">
       <h2 class="assnItem highlight">
-        <span>FINAL EXAM</span>
-        <span>Today at 2pm</span>
+        <span>FINAL EVAL</span>
+        <span>Mon (5/1) at 2pm</span>
       </h2>
-      <h2 class="assnItem highlight">
+      <!-- <h2 class="assnItem highlight">
         <span>FINAL EVAL</span>
         <span>Today at 2pm</span>
       </h2>
@@ -106,8 +105,8 @@
       <h2 class="assnItem highlight">
         <span>Graduation Information Update Survey [MOST IMPORTANT]</span>
         <span>Today at 2pm</span>
-      </h2>
-    </div> -->
+      </h2> -->
+    </div>
 
     <h1>Late Policy</h1>
     <div id="agenda">
