--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                                         <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
                                     </a>
                                     <div class="card-body">
-                                        <a href="examples6010/heroes.html">Heroes</a>
+                                        <a href="examples6010/heroes.html">Foxtail Farms</a>
                                     </div>
                                 </div>
                                 <div class="card">
                                     <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <a href="#">Project 2</a>
+                                        <a href="#">Wiki Page</a>
                                     </div>
                                 </div>
                                 <div class="card">
                                     <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <a href="#">Project 3</a>
+                                        <a href="#">Facebook Login Form</a>
                                     </div>
                                 </div>
                             </div>
@@ -49,7 +49,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Examples
+                            Exercises
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -77,7 +77,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Accordion Item #3
+                            Miscellaneous
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
