--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -78,10 +78,10 @@
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Mock Final Eval</h2>
-      <h2>Period 2 (10:35am-12pm): Mock Final Eval</h2>
+      <h2>Period 1 (9am-10:25am): Hulu Demo Part 1</h2>
+      <h2>Period 2 (10:35am-12pm): Hulu Demo Part 1 (cont.)</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Mock Final Eval (Due at 2pm)</h2>
+      <h2>Period 3 (12:45pm-2pm): Hybrid Lab Time</h2>
     </div>
 
     <h1>Coming Soon</h1>
