--- a/hulu_demo/index.html
+++ b/hulu_demo/index.html
@@ -4,10 +4,43 @@
         <meta charset="UTF-8"> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Document</title>
+        <title>Hulu</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <header id="hero">
+            <nav>
+                <ul>
+                    <li>
+                        <img src="images/Hulu-Green-digital.png" alt="hulu logo">
+                    </li>
+                    <li>
+                        <a href="#">LOG IN</a>
+                    </li>
+                </ul>
+            </nav>
+            <div id="hero_content">
+                <h5>DISNEY BUNDLE DUO BASIC</h5>
+                <img>
+                <p>Get Hulu & Disney+, both with ads, for $9.99/month.</p>
+                <a class="button_link" href="#">GET THEM BOTH</a>
+                <a href="#">Terms apply</a>
+                <a href="#">Sign up for Hulu only</a>
+            </div>
+            <footer>
+                <img>
+                <div>
+                    <h5>DISNEY BUNDLE TRIO BASIC</h5>
+                    <p>Get Hulu, Disney+, and ESPN+, all with ads, for $12.99/mo.</p>
+                </div>
+                <div>
+                    <a class="clear_button_link" href="#">GET ALL THREE</a>
+                    <a href="#">Terms apply</a>
+                </div>
+            </footer>
+        </header>
+        <section>
 
+        </section>
     </body>
 </html>
