--- a/hulu_demo/index.html
+++ b/hulu_demo/index.html
@@ -21,11 +21,11 @@
             </nav>
             <div id="hero_content">
                 <h5>DISNEY BUNDLE DUO BASIC</h5>
-                <img>
+                <img src="images/hulu-disney.png" alt="hulu disney+ logos">
                 <p>Get Hulu & Disney+, both with ads, for $9.99/month.</p>
                 <a class="button_link" href="#">GET THEM BOTH</a>
-                <a href="#">Terms apply</a>
-                <a href="#">Sign up for Hulu only</a>
+                <a class="small_link" href="#">Terms apply</a>
+                <a class="medium_link" href="#">Sign up for Hulu only</a>
             </div>
             <footer>
                 <img>
