--- a/hulu_demo/index.html
+++ b/hulu_demo/index.html
@@ -28,14 +28,16 @@
                 <a class="medium_link" href="#">Sign up for Hulu only</a>
             </div>
             <footer>
-                <img>
-                <div>
+                <div id="footer_image_container">
+                    <img src="images/bundle.png" alt="hulu disney+ espn+ logos">
+                </div>
+                <div id="footer_center">
                     <h5>DISNEY BUNDLE TRIO BASIC</h5>
                     <p>Get Hulu, Disney+, and ESPN+, all with ads, for $12.99/mo.</p>
                 </div>
                 <div>
                     <a class="clear_button_link" href="#">GET ALL THREE</a>
-                    <a href="#">Terms apply</a>
+                    <a class="tiny_link" href="#">Terms apply</a>
                 </div>
             </footer>
         </header>
