--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
                             <div class="card-group">
                                 <div class="card">
                                     <a href="examples6010/heroes.html">
-                                        <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
+                                        <img src="assets/images/foxtailfarms.png" class="card-img-top" alt="...">
                                     </a>
                                     <div class="card-body">
                                         <a href="examples6010/heroes.html">Foxtail Farms</a>
                                     </div>
                                 </div>
                                 <div class="card">
-                                    <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
+                                    <img src="assets/images/wiki.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <a href="#">Wiki Page</a>
                                     </div>
                                 </div>
                                 <div class="card">
-                                    <img src="assets/images/abstractBackground2.jpg" class="card-img-top" alt="...">
+                                    <img src="assets/images/fbform_cropped.png" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <a href="#">Facebook Login Form</a>
                                     </div>
