--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -74,21 +74,21 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 4/27 (Day 28)</h1>
+    <h1>GDWD 105 Agenda for 4/28 (Day 29)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): FIRST Survey | Hulu Demo Part 2</h2>
-      <h2>Period 2 (10:35am-12pm): Hulu Demo Part 2 (cont.)</h2>
+      <h2>Period 1 (9am-10:25am): Bootcamp Drills</h2>
+      <h2>Period 2 (10:35am-12pm): Bootcamp Drills (cont.)</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Review Survey | Lab Time</h2>
+      <h2>Period 3 (12:45pm-2pm): Bootcamp Drills (?) | Lab Time</h2>
     </div>
 
     <h1>Coming Soon</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>FINAL EVAL</span>
-        <span>Mon (5/1) at 2pm</span>
+        <span>Monday!!! (5/1) at 2pm</span>
       </h2>
       <!-- <h2 class="assnItem highlight">
         <span>FINAL EVAL</span>
