--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -88,7 +88,7 @@
     <div id="agenda">
       <h2 class="assnItem warning">
         <span>FINAL EVAL</span>
-        <span>Monday!!! (5/1) at 2pm</span>
+        <span>Monday!!! (5/1)</span>
       </h2>
       <!-- <h2 class="assnItem highlight">
         <span>FINAL EVAL</span>
