--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -84,12 +84,12 @@
       <h2>Period 3 (12:45pm-2pm): Your First Blogpost</h2>
     </div>
 
-    <h1>Coming Soon</h1>
+    <!-- <h1>Coming Soon</h1> -->
     <div id="agenda">
-      <h2 class="assnItem warning">
+      <!-- <h2 class="assnItem warning">
         <span>FINAL EVAL</span>
         <span>TODAY!!!</span>
-      </h2>
+      </h2> -->
       <!-- <h2 class="assnItem highlight">
         <span>FINAL EVAL</span>
         <span>Today at 2pm</span>
