--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -74,14 +74,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 5/2 (Day 31)</h1>
+    <h1>GDWD 105 Agenda for 5/3 (Day 32)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Intro to CMS & WordPress</h2>
-      <h2>Period 2 (10:35am-12pm): Creating a WordPress Site</h2>
+      <h2>Period 1 (9am-10:00am): Your First Blogpost | Exercise</h2>
+      <h2>Period 2 (10:10am-12pm): WordPress Customization</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Your First Blogpost</h2>
+      <h2>Period 3 (12:45pm-2pm): Sandbox Customization | Exercise</h2>
     </div>
 
     <!-- <h1>Coming Soon</h1> -->
