--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -4,6 +4,7 @@
     <title>AGENDA</title>
     <meta name="description" content="This is an amazing site; come visit!">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
       body {
         font-family: Verdana, sans-serif;
       }
@@ -55,6 +56,11 @@
       .done {
         text-decoration: line-through;
       }
+      .minimum {
+        font-family: 'Kanit', sans-serif;
+        font-weight: bold;
+        font-size: 32px;
+      }
       .fire {
         animation: fire 0.5s infinite ease-in-out;
         background-image: linear-gradient(45deg, red, yellow, red);
@@ -74,14 +80,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 5/4 (Day 33)</h1>
+    <h1>GDWD 105 Agenda for 5/5 (Day 34)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:00am): MINIMUM Devices Intro | E-Commerce Site - Creation</h2>
-      <h2>Period 2 (10:10am-12pm): E-Commerce Site - Theme</h2>
+      <h2>Period 1 (9am-10:00am): Google Fonts/Styling Demo</h2>
+      <h2>Period 2 (10:10am-12pm): <span class="minimum">MINIMUM</span> Devices Shop Page</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): E-Commerce Site - WooCommerce</h2>
+      <h2>Period 3 (12:45pm-2pm): <span class="minimum">MINIMUM</span> Devices Shop Page (Due at 2pm)</h2>
     </div>
 
     <!-- <h1>Coming Soon</h1> -->
