--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -80,14 +80,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 5/5 (Day 34)</h1>
+    <h1>GDWD 105 Agenda for 5/8 (Day 35)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:00am): Google Fonts/Styling Demo</h2>
-      <h2>Period 2 (10:10am-12pm): <span class="minimum">MINIMUM</span> Devices Shop Page</h2>
+      <h2>Period 1 (9am-10:00am): <span class="minimum">MINIMUM</span> Devices Home Page</h2>
+      <h2>Period 2 (10:10am-12pm): <span class="minimum">MINIMUM</span> Devices Home Page</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): <span class="minimum">MINIMUM</span> Devices Shop Page (Due at 2pm)</h2>
+      <h2>Period 3 (12:45pm-2pm): <span class="minimum">MINIMUM</span> Devices Home Page (Due at 2pm)</h2>
     </div>
 
     <!-- <h1>Coming Soon</h1> -->
