--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -80,14 +80,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 5/10 (Day 37)</h1>
+    <h1>GDWD 105 Agenda for 5/11 (Day 38)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:00am): Contact Page Form</h2>
-      <h2>Period 2 (10:10am-12pm): Process Post #2</h2>
+      <h2>Period 1 (9am-10:00am): Quiz 5 (WordPress) | Lab Time</h2>
+      <h2>Period 2 (10:10am-12pm): Process Post #3 | Yoast for SEO</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Quiz #5 Kahoot Review | Lab Time</h2>
+      <h2>Period 3 (12:45pm-2pm): Portfolio Menu | Lab Time</h2>
     </div>
 
     <!-- <h1>Coming Soon</h1> -->
