--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -80,14 +80,14 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 5/15 (Day 40)</h1>
+    <h1>GDWD 105 Agenda for 5/16 (Day 41)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:00am): Final Exam Review #1 (Kahoot)</h2>
+      <h2>Period 1 (9am-10:00am): Final Exam Review #2 (Kahoot)</h2>
       <h2>Period 2 (10:10am-12pm): Ad hoc Critiques and Inspiration</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Portfolio Lab Time</h2>
+      <h2>Period 3 (12:45pm-2pm): Portfolio Lab Time (Finalize Navigation)</h2>
     </div>
 
     <!-- <h1>Coming Soon</h1> -->
