--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -84,10 +84,10 @@
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:00am): Final Exam Review #3 (Kahoot)</h2>
-      <h2>Period 2 (10:10am-12pm): Portfolio Lab Time (Contact Page)</h2>
+      <h2>Period 1 (9am-10:25am): Final Exam Review #3 (Kahoot)</h2>
+      <h2>Period 2 (10:35am-12pm): Portfolio Lab Time (About Me Page)</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Portfolio Lab Time (About Me Page)</h2>
+      <h2>Period 3 (12:45pm-2pm): Portfolio Lab Time (Contact Page)</h2>
     </div>
 
     <!-- <h1>Coming Soon</h1> -->
