--- a/critique_groundrules.html
+++ b/critique_groundrules.html
@@ -26,8 +26,10 @@
     <h3>FOR THOSE GIVING CRITIQUES</h3>
     <ul>
       <li>Be kind, and be helpful</li>
-      <li>Be as objective as possible</li>
+      <li>Be as objective as possible, and focus on the Elements and Principles of Design</li>
       <li>Provide at least one positive piece of feedback, <br>and one suggestion for how to make it better</li>
+      <li>Be SPECIFIC in your feedback: specify the page, the location, the text, etc. that you're referring to</li>
+      <li>Be sure to include the WHY behind your comments: why do you think something looks good? why do you think your suggestion could make it better?</li>
     </ul>
 
   </body>
