--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -80,22 +80,22 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 5/18 (Day 43)</h1>
+    <h1>GDWD 105 Agenda for 5/19 (Day 44)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:00am): Final Exam Review #4 (Kahoot)</h2>
-      <h2>Period 2 (10:10am-12pm): Portfolio Lab Time (Gallery)</h2>
+      <h2>Period 1 (9am-10:25am): Critiques!</h2>
+      <h2>Period 2 (10:35am-12pm): Critiques!</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Portfolio Lab Time (Final Submission)</h2>
+      <h2>Period 3 (12:45pm-2pm): Portfolio Lab Time (Critique Revisions)</h2>
     </div>
 
     <!-- <h1>Coming Soon</h1> -->
     <div id="agenda">
-      <!-- <h2 class="assnItem warning">
-        <span>FINAL EVAL</span>
-        <span>TODAY!!!</span>
-      </h2> -->
+      <h2 class="assnItem highlight">
+        <span>FINAL EXAM</span>
+        <span>MONDAY!!!</span>
+      </h2> 
       <!-- <h2 class="assnItem highlight">
         <span>FINAL EVAL</span>
         <span>Today at 2pm</span>
