--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -80,21 +80,21 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for 5/19 (Day 44)</h1>
+    <h1>GDWD 105 Agenda for 5/22 (THE FINAL DAY)</h1>
     <div id="agenda">
       <h2>Announcements (9:10)</h2>
       <h3>(if you're not here by 9:10, you're tardy!)</h3>
-      <h2>Period 1 (9am-10:25am): Critiques!</h2>
-      <h2>Period 2 (10:35am-12pm): Critiques!</h2>
+      <h2>Period 1 (9am-11am): FINAL EXAM</h2>
+      <h2>Period 2 (11am-12pm): End Course Surveys | Challenge Exercise</h2>
       <h2>Lunch Break (45min)</h2>
-      <h2>Period 3 (12:45pm-2pm): Portfolio Lab Time (Critique Revisions)</h2>
+      <h2>Period 3 (12:45pm-2pm): Portfolio Lab Time (Resubmissions due by 2pm)</h2>
     </div>
 
     <!-- <h1>Coming Soon</h1> -->
     <div id="agenda">
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>FINAL EXAM</span>
-        <span>MONDAY!!!</span>
+        <span>TODAY!!!</span>
       </h2> 
       <!-- <h2 class="assnItem highlight">
         <span>FINAL EVAL</span>
