styling updates and corrections

--- a/examples_hub.html
+++ b/examples_hub.html
@@ -3,13 +3,19 @@
   <head>
     <title>107 Coding Examples Hub</title>
     <style>
+        body {
+            padding: 24px 12px;
+        }
       li > h3 {
         margin: 4px 0;
       }
       ul li {
         display: flex;
         max-width: 800px;
-        margin-bottom: 12px;
+        padding: 12px;
+      }
+      ul li:hover {
+        background-color: rgb(225, 239, 245);
       }
       ul li h4 {
         display: inline-block;
@@ -22,9 +28,9 @@
     </style>
   </head>
   <body>
-    <h1>107 Coding Examples Hub</h1>
+    <h1>GDWD 105 Coding Examples Hub</h1>
 
-    <h2>Week 1</h2>
+    <h2>Week 1 - Intro to HTML</h2>
     <ul>
         <li>
             <h4>Basic HTML Elements <br>(headings, paragraphs, and formatting)</h4>
@@ -60,7 +66,7 @@
         </li>
     </ul>
 
-    <h2>Week 2</h2>
+    <h2>Week 2 - Intro to CSS</h2>
     <ul>
         <li>
             <h4>Basic CSS I <br>(color and the box model)</h4>
@@ -93,7 +99,7 @@
             </a>
         </li>
         <li>
-            <h4>CSS Position Autobiographies <br>(a silly storybook approach to learning about CSS position values)</h4>
+            <h4>CSS Position Autobiographies <br>(a silly storybook intro to learning about CSS position values)</h4>
             <a href="examples/position_bios.html">Preview</a>
             <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/position_bios.html">
                 HTML
@@ -104,7 +110,7 @@
         </li>
     </ul>
 
-    <h2>Week 3</h2>
+    <h2>Week 3 - Advanced CSS</h2>
     <ul>
         <li>
             <h4>CSS Media Queries</h4>
@@ -127,7 +133,7 @@
             </a>
         </li>
         <li>
-            <h4>CSS Positions and Google Fonts</h4>
+            <h4>CSS Position and Google Fonts</h4>
             <a href="examples/position_and_fonts.html">Preview</a>
             <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/position_and_fonts.html">
                 HTML
@@ -168,7 +174,7 @@
         </li>
     </ul>
 
-    <h2>Week 4</h2>
+    <h2>Week 4 - More Advanced CSS</h2>
     <ul>
         <li>
             <h4>CSS Grids</h4>
@@ -200,7 +206,7 @@
         </li>
     </ul>
 
-    <h2>Week 5</h2>
+    <h2>Week 5 - Forms</h2>
     <ul>
         <li>
             <h4>HTML Forms (with CSS styling)</h4>
@@ -221,6 +227,26 @@
             <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/css/fb_form_demo.css">
                 CSS
             </a>
+        </li>
+    </ul>
+
+    <h2>Week 6 - Putting It All Together</h2>
+    <ul>
+        <li>
+            <h4>Mock Final Eval (GOOD LUCK!)</h4>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </li>
+    </ul>
+
+    <h2>Week 7-9 - Only WordPress from Here</h2>
+    <ul>
+        <li>
+            <h4>Mock Final Eval (GOOD LUCK!)</h4>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
         </li>
     </ul>
   </body>
