--- a/examples/flexbox_content.html
+++ b/examples/flexbox_content.html
@@ -8,11 +8,23 @@
         <link href="css/flexbox_content.css" rel="stylesheet">
     </head>
     <body>
-        <nav></nav>
         <main>
+            <h1>Let's explore how we can use Flexbox to arrange content</h1>
+            <h2>Let's start by trying to create a gallery</h2>
+            <section class="gallery">
+                <img src="images/sadcat.jpg">
+                <img src="images/sadcat.jpg">
+                <img src="images/goat.jpeg">
+                <img src="images/sadcat.jpg">
+                <img src="images/goat.jpeg">
+                <img src="images/goat.jpeg">
+                <img src="images/sadcat.jpg">
+            </section>
+
+            <h2>Now let's try to get text and image content side by side</h2>
             <section class="side_by_side">
                 <div class="img_container">
-                    <img src="images/derplander.jpeg">
+                    <img src="images/goat.jpeg">
                 </div>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis necessitatibus eius reprehenderit distinctio, vero laborum tempore magni itaque consectetur! Dolore accusamus atque doloribus molestiae commodi facere quaerat cum animi?
@@ -23,27 +35,20 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, provident! Explicabo minima repellendus, quas necessitatibus voluptatem impedit facere beatae eos tenetur excepturi nulla debitis, inventore optio delectus blanditiis, ea deleniti.
                 </p>
                 <div class="img_container">
-                    <img src="images/endwalker.jpeg">
+                    <img src="images/sadcat.jpg">
                 </div>
             </section>
-            <section class="gallery">
-                <img src="images/endwalker.jpeg">
-                <img src="images/endwalker.jpeg">
-                <img src="images/derplander.jpeg">
-                <img src="images/endwalker.jpeg">
-                <img src="images/derplander.jpeg">
-                <img src="images/derplander.jpeg">
-                <img src="images/endwalker.jpeg">
-            </section>
+
+            <h2>Now let's try a single row of images</h2>
             <section class="gallery_row">
                 <div class="img_container">
-                    <img src="images/endwalker.jpeg">
+                    <img src="images/sadcat.jpg">
                 </div>
                 <div class="img_container">
-                    <img src="images/endwalker.jpeg">
+                    <img src="images/sadcat.jpg">
                 </div>
                 <div class="img_container">
-                    <img src="images/derplander.jpeg">
+                    <img src="images/goat.jpeg">
                 </div>
                 
             </section>
