--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>107 Coding Examples Hub</title>
+        <title>GDWD 105 Coding Examples Hub</title>
         <style>
             body {
                 padding: 24px 12px;
