more examples updates

--- a/examples/grid_layout_areas.html
+++ b/examples/grid_layout_areas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Grid Examples</title>
+        <title>Grid Layout Examples - using Grid Areas</title>
         <link href="css/grid_layout_areas.css" rel="stylesheet">
     </head>
     <body>
