--- a/examples/html_intermediate.html
+++ b/examples/html_intermediate.html
@@ -30,7 +30,7 @@
 
         <!-- Local Image -->
         <img src="images/goat.jpeg">
-        <img src="images/derplander.jpeg">
-        <img src="images/endwalker.jpeg">
+        <img src="images/abstract8.jpg">
+        <img src="images/dice.png">
     </body>
 </html>
