--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     </head>
     <body>
         <h1>GDWD 105 Coding Examples Hub</h1>
+        <p>
+            Loosely organized into Weeks. Keep in mind that every class dynamic is different, and you may find yourself ahead or behind some weeks.
+        </p>
 
         <h2>Week 1 - Intro to HTML</h2>
         <ul>
@@ -54,8 +57,8 @@
             </li>
             <li class="indent">
                 <h4>Just Paragraphs and Text Styling Tags</h4>
-                <a href="examples/headings.html">Preview</a>
-                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/headings.html">
+                <a href="examples/text_styling_tags.html">Preview</a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/text_styling_tags.html">
                     HTML
                 </a>
                 <a></a>
@@ -204,6 +207,16 @@
                     CSS
                 </a>
             </li>
+            <li class="indent">
+                <h4>More CSS Transitions Examples</h4>
+                <a href="examples/css_transitions.html">Preview</a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/css_transitions.html">
+                    HTML
+                </a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/css/css_transitions.css">
+                    CSS
+                </a>
+            </li>
             <li>
                 <h4>CSS Position and Google Fonts</h4>
                 <a href="examples/position_and_fonts.html">Preview</a>
@@ -226,7 +239,7 @@
             </li>
             <li class="indent">
                 <h4>Flex Container Properties Cheatsheet</h4>
-                <a href="examples/floats.html">Preview</a>
+                <a href="examples/flex_containers_cheatsheet.html">Preview</a>
                 <a></a>
                 <a></a>
             </li>
@@ -294,6 +307,16 @@
                     CSS
                 </a>
             </li>
+            <li class="indent">
+                <h4>Responsive Grid Layout - with Areas</h4>
+                <a href="examples/grid_layout_areas_responsive.html">Preview</a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/grid_layout_areas_responsive.html">
+                    HTML
+                </a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/css/grid_layout_areas_responsive.css">
+                    CSS
+                </a>
+            </li>
             <li>
                 <h4>Heros (HTML + CSS)</h4>
                 <a href="examples/heroes.html">Preview</a>
@@ -355,6 +378,37 @@
         </ul>
 
         <h2>Week 7-9 - Only WordPress from Here</h2>
+
+        <h2>Appendix - Extra Content</h2>
+        <ul>
+            <li>
+                <h4>HTML Audio Elements</h4>
+                <a href="examples/audio.html">Preview</a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/audio.html">
+                    HTML
+                </a>
+                <a></a>
+            </li>
+            <li>
+                <h4>HTML Video Elements</h4>
+                <a href="examples/video.html">Preview</a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/video.html">
+                    HTML
+                </a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/css/video.css">
+                    CSS
+                </a>
+            </li>
+            <li>
+                <h4>CSS Animation - Basic</h4>
+                <a href="examples/css_animations.html">Preview</a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/css_animations.html">
+                    HTML
+                </a>
+                <a href="https://github.com/FIRST-GDWD/FIRST-GDWD.github.io/blob/main/examples/css/css_animations.css">
+                    CSS
+                </a>
+            </li>
 
     </body>
 </html>
