--- a/examples/media_queries.html
+++ b/examples/media_queries.html
@@ -8,6 +8,7 @@
         <link href="css/media_queries.css" rel="stylesheet">
     </head>
     <body>
+        <h1>Stretch and squish the view width and see what happens!</h1>
         <div id="desktop">
             This will show on Desktop widths
         </div>
